v1.2.Beta: Execução de shells em ambiente remoto com coleta de log funcionando;